# rust_worlds

./: .gitignore  Cargo.toml  basic.wgsl  diagram.drawio  imgui.ini  verdana_sdf.fnt  voxel.wgsl  voxels.wgsl
app/: Cargo.toml
app/src/: client_event.rs  hash_packet.rs  hash_packet_test.rs  lib.rs  packets.rs  serialization.rs
app/src/components/: mod.rs  player.rs
client/: cargo.toml
client/src/: client.rs  lib.rs  main.rs
networking/: cargo.toml
networking/src/: boof_socket.rs  lib.rs  util.rs
networking/src/stream/: agent.rs  connection.rs  connection_test.rs  mod.rs
reliable_udp/: cargo.toml
reliable_udp/src/: agent.rs  boof_socket.rs  connection.rs  lib.rs  serialization.rs
resources/: palette.txt  verdana.fnt
server/: cargo.toml
server/src/: main.rs  server.rs
shaders/: basic.wgsl  polygons.wgsl  rect.wgsl  sprite.wgsl  text.wgsl  voxel.wgsl
src/: app.rs  board.rs  lib.rs  main.rs  rotating_tri.rs  vertex.rs  voxels.rs
src/core/: event.rs  mod.rs  window.rs
src/graphics/: attachment.rs  graphics_tests.rs  mod.rs  render_api.rs  render_context.rs  render_pass.rs  render_pipeline.rs  renderer.rs  subpass.rs  texture.rs  uniform.rs  wgsl_types.rs
src/graphics/shader/: descriptors.rs  mod.rs  reflector.rs  shader_core.rs  shader_tests.rs  texture_group.rs
src/rendering/: clear_color_renderer.rs  mod.rs  render_context.rs  renderer.rs  subpass.rs  surface_view.rs
src/scenes/: mod.rs  rotating_tri.rs  voxels.rs
src/scenes/shared/: vertex.rs
src/two_dimensional/: camera.rs  mod.rs
src/two_dimensional/sprite/: mod.rs  sprite.rs  sprite.wgsl  sprite_pass.rs  sprite_vertex.rs  tile_view.rs
src/two_dimensional/text/: mod.rs  render_pass.rs  text_pass.rs
src/ui/: mod.rs  ui.rs  ui_render_pass.rs
worlds/: Cargo.toml
worlds/src/: app.rs  lib.rs  main.rs  worlds.rs
worlds/src/core/: event.rs  event_system.rs  mod.rs  scene.rs
worlds/src/graphics/: buffers.rs  mod.rs  render_api.rs  render_pipeline.rs  texture.rs  wgsl_types.rs
worlds/src/graphics/shader/: descriptors.rs  mod.rs  reflector.rs  shader_core.rs  texture_group.rs  uniform_group.rs
worlds/src/graphics/shader/tests/: mod.rs  shader_tests.rs
worlds/src/scenes/: cpu_voxels.rs  mod.rs  multiplayer.rs  networking.rs  polygons.rs  ui.rs  voxels.rs  world.rs
worlds/src/scenes/components/: camera.rs  mod.rs  vertex.rs
worlds/src/scenes/shared/: camera.rs  mod.rs
worlds/src/ui/: font.rs  font_test.rs  mod.rs  render_structs.rs  renderer.rs  text_box.rs
worlds/src/util/: files.rs
