[package]
name = "rust_worlds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.8.1"
cgmath = "0.18.0"
env_logger = "0.9.1"
pollster = "0.2.5"
wgpu = "0.13.0"
wgpu_glyph = "0.17.0"
winit = "0.27.4"
