[package]
name = "rust_worlds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
bevy_ecs = "0.8.1"
bytemuck = "1.12.1"
cgmath = "0.18.0"
env_logger = "0.9.1"
imgui = "0.8.0"
imgui-wgpu = "0.20.0"
imgui-winit-support = {version = "0.8.2", features = ["winit-26"]}
pollster = "0.2.5"
wgpu = {version = "0.13.0"}
wgpu_glyph = "0.17.0"
winit = "0.26.1"
itertools = "0.10.5"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
