[package]
name = "worlds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
pollster = "0.2.5"

itertools = "0.10.5"
bitflags = "1.3.2"
rayon = "1.6.0"

winit = "0.26.1"

wgpu = {version = "0.13.0"}
wgpu_glyph = "0.17.0"

naga = {version = "0.10.0", features = ["wgsl-in"]}
bytemuck = "1.12.1"
cgmath = "0.18.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
