[package]
name = "worlds"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.1"
pollster = "0.2.5"

itertools = "0.10.5"
bitflags = "1.3.2"
rayon = "1.6.0"

winit = {version = "0.27.5", features = ["serde"]}

wgpu = {version = "0.13.0"}
wgpu_glyph = "0.17.0"

naga = {version = "0.10.0", features = ["wgsl-in"]}
bytemuck = "1.12.1"
cgmath = "0.18.0"
serde = "1.0.149"
tobj = "3.2.3"
local-ip-address = "0.4.9"
public-ip = "0.2.2"
regex = "1.7.0"
rand = "0.8.5"

[dependencies.app]
path = "../app"
features = ["client"]

[dependencies.networking]
path = "../networking"

[dependencies.client]
path = "../client"

[dependencies.server]
path = "../server"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
